media/css/mediathread.css
/* ... */
.collection-widget .actions {
    margin-top: 0;
}

.collection-widget .asset-title-link.insert {
    float: left;
}

.collection-widget table, .collection-widget tr, .collection-widget td {
    border: none;
}

.mce-i-icon-collection {
    width:100px;
    display:block;
    height:20px;
    background:black;
    color:white;
    text-decoration:none;
    padding-left:20px;
}
.mce-i-icon-collection:before{
    content: '';
    background: url('../img/viewfullcollection.png');
    background-size:cover;
    position:absolute;
    width: 12px;
    height: 12px;
    margin-top: 2px;
}

#collection-modal .modal-dialog {
    width: 650px !important;
}

#collection-modal .filter-widget .row {
    margin-right: 0;
    margin-left: 0;
}

#collection-modal .ajaxloader {
    width: 96%;
}

#collection-modal .col-md-5,
collection-modal .col-md-4,
collection-modal .col-md-3,
collection-modal .col-md-2 {
    padding-right: 5px;
    padding-left: 5px;
}

#collection-modal .modal-body {
    max-height: 85vh; /* Sets the height to 80/100ths of the viewport. */
    overflow-y: auto;
    margin-bottom: 2px;
}

#collection-modal .materials {
    background-color: white;
    margin: 0;
}

#collection-modal .gallery-item-project {
    margin-left: 0;
    width: 100%;
}

#collection-modal .collection-widget span.citationTemplate {
    float: left;
}

#collection-modal .collection-widget .actions {
    margin-top: 0;
}

#collection-modal .collection-widget .asset-title-link.insert {
    float: left;
}

#collection-modal .collection-widget table, .collection-widget tr, .collection-widget td {
    border: none;
}

#collection-modal .collection-choice {
    display: block;
    margin-top: 7px;
    margin-right: 5px;
    width: 140px;
    text-align: left;
}

#collection-modal .actions a {
    float: none;
}

#collection-modal .selection-level-info {
    padding: 5px 10px 5px 20px;
}

#collection-modal img.materialCitation {
    margin: 1px 5px 0 -5px;
}

#collection-modal .asset-view-tabs {
    width: 45%;
    float: left;
    margin-left: 20px;
}

#collection-modal .asset-view-tabs h2 {
    margin-top: 0px;
}

#collection-modal .videoclipbox {
    float: left;
    width: 51%;
}

.spacer {
    margin-top: 10px;
}

/* Sequence assignment submitted state */
#sequence.submitted .jux-playhead-line .jux-playhead-bottom-cutpoint {
    display: none;
}

#sequence.submitted .jux-playhead-line {
    height: 10px;
}

